Fix alignment and spacing in index.html and main.css Create and fixed mobile design

--- a/styles/Elements/_concept.scss
+++ b/styles/Elements/_concept.scss
@@ -88,7 +88,9 @@
     margin-top: 5%;
     width: 100%;
     height: 25%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
 
     &::before {
@@ -179,7 +181,7 @@
     
 
     font-size: 1.08em;
-    word-spacing: 10px;
+    word-spacing: 3px;
     line-height: 1.1;
     text-align: center;
 }
