--- a/styles/main.css
+++ b/styles/main.css
@@ -506,7 +506,9 @@ body {
   margin-top: 5%;
   width: 100%;
   height: 25%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 @media ((min-width: 768px) and (max-width: 991.98px)) {
@@ -599,7 +601,7 @@ body {
 
 .box__text {
   font-size: 1.08em;
-  word-spacing: 10px;
+  word-spacing: 3px;
   line-height: 1.1;
   text-align: center;
 }
